--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "text2gcode.js",
   "dependencies": {
     "gcanvas": "^0.0.24",
-    "opentype.js": "^0.3.0",
+    "opentype.js": "0.3.0",
     "yargs": "^1.2.5"
   },
   "devDependencies": {},
